# misc

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
libs/: CMakeLists.txt  collections.cpp  collections.h
src/: CMakeLists.txt  src.cpp
tests/: CMakeLists.txt  test_collections.cpp
tools/: CMakeLists.txt
